Clean up and improvements

--- a/Week1/web/style.css
+++ b/Week1/web/style.css
@@ -59,3 +59,11 @@ footer {
 	padding: 20px;
 	text-align: center;
 }
+
+/* style the image */
+.image{
+	width: 40rem;
+	height: auto;
+	padding: 9px;
+	align-items: center;
+}
